--- a/main.css
+++ b/main.css
@@ -1,5 +1,10 @@
 body{
-    background: linear-gradient(180deg, rgb(221, 217, 248) 0%, rgb(142, 193, 252) 57%, rgb(53, 129, 252) 100%);
+    /* background: linear-gradient(180deg, rgb(221, 217, 248) 0%, rgb(142, 193, 252) 57%, rgb(53, 129, 252) 100%); */
+    background: linear-gradient(180deg, rgb(0, 0, 0) 10%, rgb(88, 155, 231) 57%, rgb(0, 0, 0) 100%);
+}
+
+.row{
+    width: 100%;
 }
 
 .jumbotron-fluid{
@@ -27,15 +32,16 @@ body{
 }
 
 .bg-primary{
-    background: black;
-    background: linear-gradient(270deg, rgb(0, 0, 0) 0%, rgb(6, 12, 75) 57%, rgb(0, 0, 0) 100%);
+    background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(6, 12, 75) 75%, rgb(0, 0, 0) 100%);
     border-top: 1px solid black;
     border-bottom: 1px solid black;
 }
 
 .btn-lg{
-    border: 1px solid black;
-    box-shadow: rgba(255,255,255,0.6) 2px 2px 2px;
+    border: 1px solid white;
+    box-shadow: rgba(255,255,255,0.4) 2px 2px 2px;
+    background: linear-gradient(270deg, rgb(0, 0, 0) 0%, rgb(6, 12, 75) 57%, rgb(0, 0, 0) 100%);
+    opacity: 1.5;
 }
 
 li{
@@ -67,6 +73,7 @@ li{
     background-color:rgba(0, 0, 0, 0.9);
     border-top: 2px solid white;
     border-bottom: 2px solid white;
+    border-right: 2px solid white;
 }
 
 .card{
@@ -110,7 +117,6 @@ li{
     color: white;
 }
 
-
 .card1{
     background-image: url("assets/monthleyPreview.png");
 }
@@ -125,13 +131,11 @@ li{
 }
 
 
-
-
 /* Contact Form-------------------------------------------------> */
 
 h1 {
     font-weight: 500;
-    color:rgb(17, 11, 131)
+    color:rgb(255, 255, 255)
 }
 
 input, textarea { 
@@ -142,10 +146,9 @@ input, textarea {
     padding: 20px;
     margin: 4%;
     width: 80%;
-    border: 1px solid grey;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    box-shadow: rgba(255, 255, 255, 0.2) 0px 4px 12px;
     border-radius: 5px;
-    background: #fff;
+    background: linear-gradient(180deg, rgb(14, 19, 63) 0%, rgb(6, 12, 75) 70%, rgb(7, 26, 54) 100%);
 }
 
 .contact-form input,
